# SmartScript

./: .gitignore  CMakeLists.txt  StdScript.ss  clean.sh
src/: main.cpp  ssconfig.hpp
src/api/: api.cpp  api.hpp
src/runtime/: runtime.cpp  runtime.hpp  var.cpp
